[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "class_inspector"
authors = [
    {name="Ed Cuss"},
]
description = "class inspector package"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.6"
version = "0.2.0"
dependencies = [
    "attrs >= 22.2.0",
    "python-dotenv >= 0.20.0",
]

[project.optional-dependencies]
test = [
    "numpy >= 1.19.5",
    "pandas",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pre-commit",
    "tox",
]
lint = [
    "black >= 24",
    "ruff",
    "pylint>=3.0.1",
]
dev = [
    "class_inspector[test,lint]",
]

[tool.black]
line-length = 88

[tool.ruff]
lint.extend-select = ["I", "W"]
lint.ignore = ["E741"]
line-length = 88

[tool.pytest.ini_options]
testpaths = [
    "tests",
]


[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "*__init__.py",
    "*_logger.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80